--- a/wg-install.yaml
+++ b/wg-install.yaml
@@ -8,3 +8,6 @@
     uri:
       url: "https://raw.githubusercontent.com/angristan/wireguard-install/master/wireguard-install.sh"
       dest: /root
+      
+  - name: Changing chmod adding "+x"
+    file: dest=/root/wireguard-install.sh mode=+x
